Issue #11; updating logo sizing, content block whitespace

--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,12 @@ font-family: 'Open Sans', sans-serif;
 
 body {
   font-family: 'Open Sans', sans-serif;
+	padding: 0;
+	margin: 0;
+}
+
+.container-fluid {
+	padding: 0;
 }
 
 /* Navbar styles */
@@ -34,6 +40,14 @@ nav.navbar {
   
 .navbar ul.navbar-nav li.nav-item a.nav-link:hover {
   color: rgba(255,255,255,.75);
+}
+
+/* Logo styles */
+
+.logo {
+	max-width: 100%;
+	max-height: 50px;
+	padding-left: .75em;
 }
 
 /* Image Section Styles */
@@ -93,7 +107,22 @@ span.fa-dark {
   font-size: 2em;
 }
 
-/* Layout 1 row styles */
+.content-row {
+	margin-top: 6em;
+	margin-bottom: 0;
+}
+
+footer {
+  margin-top: 2em;
+  border: 1px solid #000;
+  padding-top: 2em;
+}
+
+.copyright {
+  padding-bottom: 1em;
+}
+
+/* Layout 1 row styles
 
 .section-top {
   margin-bottom: 5em;
@@ -159,25 +188,28 @@ img {
 
 .contact-header {
   margin-bottom: .75em;
-}
+}*/
 
-/* Layout 2 styles */
+/* Layout 2 styles
 
 .extra-space-row {
   margin-bottom: 3em;
-}
+} */
 
-/* Home page styles */
+/* Home page styles
 
 .img-home {
   width: 400px;
   height: 400px;
   max-width: 100%;
-}
+}*/
 
 /* change navbar background on collapse */
 @media (max-width: 768px) {
   nav.navbar {
     background: rgba(0,0,0,.5);
   }
+	.logo {
+		padding-left: 0;
+	}
 }
